[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 0.01
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = parset
description = Parameter handling package
long_description = saves, validated and edits parameters for complex tasks
author = STScI
author_email = perry@stsci.edu
license = BSD
url = https://github.com/perrygreenfield/parset
edit_on_github = False
github_project = perrygreenfield/parset

[entry_points]